[package]
name = "queue"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
